--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-primary">
 	<div class="container">
-		<a class="navbar-brand" href="#">C'est La Vie</a>
+		<a class="navbar-brand" routerLink="/">C'est La Vie</a>
 		<button
 			class="navbar-toggler"
 			type="button"
@@ -13,23 +13,24 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarCollapse">
-			<ul class="navbar-nav me-auto mb-2 mb-md-0" *ngIf="accountService.currentUser$ | async">
-				<li class="nav-item">
-					<a class="nav-link" href="#">Matches</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Lists</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Messages</a>
-				</li>
+			<ul class="navbar-nav me-auto mb-2 mb-md-0">
+				<ng-container *ngIf="accountService.currentUser$ | async">
+					<li class="nav-item">
+						<a class="nav-link" routerLink="/members" routerLinkActive="active">Matches</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" routerLink="/lists" routerLinkActive="active">Lists</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" routerLink="/messages" routerLinkActive="active">Messages</a>
+					</li>
+				</ng-container>
 			</ul>
 
-            <div class="dropdown" *ngIf="accountService.currentUser$ | async" dropdown>
-                <a class="dropdown-toggle text-light" dropdownToggle>Welcome user</a>
+            <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
+                <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{user.username | titlecase}}</a>
                 <div class="dropdown-menu" *dropdownMenu>
                     <a class="dropdown-item">Edit Profile</a>
-                    <div class="dropdown-divider"></div>
                     <a class="dropdown-item" (click)="logout()">Logout</a>
                 </div>
             </div>
@@ -55,7 +56,7 @@
 					type="password"
 					placeholder="Password"
 				/>
-				<button class="btn btn-primary" type="submit">Login</button>
+				<button class="btn btn-secondary" type="submit">Login</button>
 			</form>
 		</div>
 	</div>
