added server error handling, exception handling middleware, error interceptor, error testing page

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -3,8 +3,8 @@
         <h1>Find your match</h1>
         <p class="lead">Come on in to view match, just sign up</p>
         <div class="text-center">
-            <button class="btn btn-primary btn-lg me-2" (click)="registerToggle()">Register</button>
-            <button class="btn btn-secondary btn-lg">Learn More</button>
+            <button class="btn btn-outline-primary btn me-2" (click)="registerToggle()">Register</button>
+            <button class="btn btn-outline-secondary btn">Learn More</button>
         </div>
     </div>
 
