--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -56,7 +56,7 @@
 					type="password"
 					placeholder="Password"
 				/>
-				<button class="btn btn-secondary" type="submit">Login</button>
+				<button class="btn btn-outline-success" type="submit">Login</button>
 			</form>
 		</div>
 	</div>
