added edit profile page/function, put request api side, loading indicator, service to store state, Can Deactivate route guard

--- a/client/src/app/errors/not-found/not-found.component.html
+++ b/client/src/app/errors/not-found/not-found.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <h1>Not Found</h1>
-    <button class="btn btn-outline-primary" routerLink="/">Back to home page</button>
+    <button class="btn btn-primary" routerLink="/">Back to home page</button>
 </div>
