--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -23,8 +23,8 @@
             </div>
             <div class="card-footer">
                 <div class="btn-group d-flex">
-                    <button class="btn btn-outline-primary"><i class="fa fa-heart"></i></button>
-                    <button class="btn btn-outline-success"><i class="fa fa-envelope"></i></button>
+                    <button class="btn btn-primary"><i class="fa fa-heart"></i></button>
+                    <button class="btn btn-success"><i class="fa fa-envelope"></i></button>
                 </div>
             </div>
         </div>
