--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -30,7 +30,7 @@
             <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
                 <a class="dropdown-toggle text-light text-decoration-none" dropdownToggle>Welcome {{user.username | titlecase}}</a>
                 <div class="dropdown-menu" *dropdownMenu>
-                    <a class="dropdown-item">Edit Profile</a>
+                    <a class="dropdown-item" routerLink="/member/edit">Edit Profile</a>
                     <a class="dropdown-item" (click)="logout()">Logout</a>
                 </div>
             </div>
@@ -56,7 +56,7 @@
 					type="password"
 					placeholder="Password"
 				/>
-				<button class="btn btn-outline-success" type="submit">Login</button>
+				<button class="btn btn-success" type="submit">Login</button>
 			</form>
 		</div>
 	</div>
