--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,15 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
-.tab-panel {
+  .tab-panel {
+    border: 1px solid #ddd;
     padding: 10px;
     border-radius: 4px;
   }
   
   .nav-tabs > li.open, .member-tabset > .nav-tabs > li:hover {
-    border-bottom: 4px solid rgba(55, 141, 252);
+    border-bottom: 4px solid #909ed8;
   }
   
   .member-tabset > .nav-tabs > li.open > a, .member-tabset > .nav-tabs > li:hover > a {
-    border: 0;
+    border: 0 !important;
     background: none !important;
     color: #333333;
   }
@@ -23,12 +24,11 @@
   }
   
   .member-tabset > .nav-tabs > li.active {
-    border-bottom: 4px solid rgba(55, 141, 252);
+    border-bottom: 4px solid #3459e6;
     position: relative;
   }
   
   .member-tabset > .nav-tabs > li.active > a {
-    background: none;
     border: 0 !important;
     color: #333333;
   }
@@ -39,7 +39,17 @@
   
   .member-tabset > .tab-content {
     margin-top: -3px;
+    background-color: #fff;
     border: 0;
+    border-top: 1px solid #eee;
     padding: 15px 0;
   }
   
+  .nav-tabs {
+      --bs-nav-tabs-border-width: 0px;
+  }
+
+  .gallery {
+    height: 500px;
+    background-color: white;
+  }
